--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,13 @@
   },
   "require": {
     "php": ">=8.2",
-    "symfony/yaml": "^6.4"
+    "symfony/yaml": "^7.0",
+    "psr/http-server-middleware": "^1.0",
+    "psr/http-server-handler": "^1.0",
+    "psr/container": "^2.0",
+    "nyholm/psr7": "^1.8",
+    "nyholm/psr7-server": "^1.1",
+    "nikic/fast-route": "^1.3"
   },
   "scripts": {
     "build": "php bin/compile.php"
